--- a/SignUp.html
+++ b/SignUp.html
@@ -38,30 +38,19 @@
 					<form class="form-horizontal col-sm-12 col-md-8">
 						<p>Thank you for your interest in MoneyPod. We need some information to verify your identity to set up your account. Should take just a few minutes.</p>
 						<p>Which account type do you want to open?</p>
-						<div class="form-group">
-						    <label for="mobile" class="col-sm-4 control-label text-uppercase">Mobile Number</label>
-						    <div class="col-sm-8">
-						      <input type="text" class="form-control text-uppercase input-sm" id="mobile" placeholder="">
+						<div class="form-group switch">
+						    <div class="col-sm-1 col-sm-offset-1">
+								<input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
+								<label for="cmn-toggle-1"></label>
 						    </div>
-
-
-
-<div class="switch">
-  <input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round" type="checkbox">
-  <label for="cmn-toggle-1"></label>
-</div>
-
-<div class="switch">
-  <input id="cmn-toggle-4" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
-  <label for="cmn-toggle-4"></label>
-</div>
-
-<div class="switch">
-  <input id="cmn-toggle-7" class="cmn-toggle cmn-toggle-yes-no" type="checkbox">
-  <label for="cmn-toggle-7" data-on="Yes" data-off="No"></label>
-</div>
-
-
+							<div class="col-sm-10 text-uppercase">Individual account</div>
+						</div>
+						<div class="form-group switch">
+						    <div class="col-sm-1 col-sm-offset-1">
+								<input id="cmn-toggle-2" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
+								<label for="cmn-toggle-2"></label>
+						    </div>
+							<div class="col-sm-10 text-uppercase">Joint account</div>
 						</div>
 						<p>IMPORTANT INFORMATION: Federal law requires all financial institution to obtain, verify, and record information that identifies each person who opens an account. What this means for you? When you open an account, we will ask for your name, address, date of birth, and other information that will allow us to identify you.</p>
 						<div class="form-group">
