--- a/AccountProfile.html
+++ b/AccountProfile.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,300,700,400italic,900" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="Styles/global.css">
 </head>
 <body>
      <button id="menuToggler">
