--- a/SignUp.html
+++ b/SignUp.html
@@ -39,18 +39,18 @@
 						<p>Thank you for your interest in MoneyPod. We need some information to verify your identity to set up your account. Should take just a few minutes.</p>
 						<p>Which account type do you want to open?</p>
 						<div class="form-group switch">
-						    <div class="col-sm-1 col-sm-offset-1">
+						    <div class="col-sm-11 col-sm-offset-1">
 								<input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
 								<label for="cmn-toggle-1"></label>
+								<div class="text-uppercase">Individual account</div>
 						    </div>
-							<div class="col-sm-10 text-uppercase">Individual account</div>
 						</div>
 						<div class="form-group switch">
-						    <div class="col-sm-1 col-sm-offset-1">
+						    <div class="col-sm-11 col-sm-offset-1">
 								<input id="cmn-toggle-2" class="cmn-toggle cmn-toggle-round-flat" type="checkbox">
 								<label for="cmn-toggle-2"></label>
+								<div class="text-uppercase">Joint account</div>
 						    </div>
-							<div class="col-sm-10 text-uppercase">Joint account</div>
 						</div>
 						<p>IMPORTANT INFORMATION: Federal law requires all financial institution to obtain, verify, and record information that identifies each person who opens an account. What this means for you? When you open an account, we will ask for your name, address, date of birth, and other information that will allow us to identify you.</p>
 						<div class="form-group">
