--- a/plps/index.html
+++ b/plps/index.html
@@ -56,9 +56,11 @@
               <input name="Search" placeholder="How can we help?" type="search">
               <a href="#" type="submit">SEARCH</a>
           </form>
-          <a href="#" class="close-search"><span></span></a>
+          <a href="#" class="close-search"><span class="sprite-close"></span></a>
         </div>
       </div>
+    </div>
+    <div class="sticky-nav">
     </div>
   </header>
 
