started working on sticky nav

--- a/plps/index.html
+++ b/plps/index.html
@@ -61,6 +61,10 @@
       </div>
     </div>
     <div class="sticky-nav">
+      <div class="wrapper">
+        <h2>Girls GoodNites Bedtime Pants</h2>
+        <a href="#" class="button radius buy">BUY NOW</a>
+      </div>
     </div>
   </header>
 
