added font awesome

--- a/plps/index.html
+++ b/plps/index.html
@@ -6,6 +6,8 @@
     <title>::GoodNites::</title> 
 
   <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/foundation.min.css" />
+  <link rel="stylesheet" href="css/font-awesome.min.css">
 
   <!-- Custom Stylesheets -->
   <link rel="stylesheet" href="css/global.css" />
@@ -64,6 +66,18 @@
       <div class="wrapper">
         <h2>Girls GoodNites Bedtime Pants</h2>
         <a href="#" class="button radius buy">BUY NOW</a>
+      </div>
+    </div>
+    <div class="sticky-nav-links">
+      <div class="wrapper">
+        <ul class="right">
+          <li><a href="">IMAGES</a></li>
+          <li><a href="">FEATURES</a></li>
+          <li><a href="">SIZING</a></li>
+          <li><a href="">SAVE NOW</a></li>
+          <li><a href="">EARN POINTS</a></li>
+          <li><a href="">REVIEWS</a></li>
+        </ul>
       </div>
     </div>
   </header>
