--- a/plps/index.html
+++ b/plps/index.html
@@ -67,6 +67,45 @@
       </div>
     </div>
   </header>
+  <footer>
+    <div class="footer-links">
+      <div class="row">
+        <div class="columns medium-3">
+          <span class="list-heading">
+            Common Questions
+          </span>
+          <ul>
+            <li><a target="_new" href="#">Kimberly-Clark Brands </a></li>
+            <li><a href="#">Legal Statement</a></li>
+            <li><a target="_new" href="#">Press </a></li>
+          </ul>
+        </div>
+        <div class="columns medium-3">
+          <span class="list-heading">
+            Contact US
+          </span>
+          <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a target="_new" href="#">Careers </a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+          </ul>
+        </div>
+        <div class="columns medium-3">
+          <ul>
+            <li><a href="#"><img src="http://placehold.it/30x30"></a></li>
+            <li><a href="#"><img src="http://placehold.it/30x30"></a></li>
+            <li><a href="#"><img src="http://placehold.it/30x30"></a></li>
+            <li><a href="#"><img src="http://placehold.it/30x30"></a></li>
+            <li><a href="#"><img src="http://placehold.it/30x30"></a></li>
+            <li><a href="#"><img src="http://placehold.it/75x30"></a></li>
+          </ul>
+        </div>
+        <div class="columns medium-3">
+          <a href="#" class="button round">Healthcare Professionals</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
     <!-- Global Scripts -->
     <script src="js/vendor/jquery.js"></script>
