--- a/plps/index.html
+++ b/plps/index.html
@@ -81,13 +81,36 @@
       </div>
     </div>
   </header>
+
+  <div class="clearfix"></div>
+  
   <footer>
     <div class="footer-links">
+      <div class="row footer-header show-for-medium-up">
+        <div class="columns medium-3">
+          <div class="footer-heading">
+            Common Questions
+          </div>
+        </div>
+        <div class="columns medium-3">
+          <div class="footer-heading">
+            Contact US
+          </div>
+        </div>
+        <div class="columns medium-3">
+          
+        </div>
+        <div class="columns medium-3">
+          <div class="footer-heading pull-right">
+            1-877-648-2484
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="columns medium-3">
-          <span class="list-heading">
+          <div class="footer-heading hide-for-medium-up">
             Common Questions
-          </span>
+          </div>
           <ul>
             <li><a target="_new" href="#">Kimberly-Clark Brands </a></li>
             <li><a href="#">Legal Statement</a></li>
@@ -95,9 +118,9 @@
           </ul>
         </div>
         <div class="columns medium-3">
-          <span class="list-heading">
+          <div class="footer-heading hide-for-medium-up">
             Contact US
-          </span>
+          </div>
           <ul>
             <li><a href="#">Privacy Policy</a></li>
             <li><a target="_new" href="#">Careers </a></li>
@@ -115,7 +138,37 @@
           </ul>
         </div>
         <div class="columns medium-3">
+          <div class="footer-heading pull-right hide-for-medium-up">
+            1-877-648-2484  
+          </div>
           <a href="#" class="button round">Healthcare Professionals</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-info">
+      <div class="footer-info-header">
+        <div class="row">
+          <div class="columns small-12">
+            <div class="pull-left">
+              Kimberly-Clark Baby and Childcare Brands
+            </div>
+            <div class="pull-right text-right">
+              <a href="#"><img src="http://placehold.it/60x30"></a>
+              <a href="#"><img src="http://placehold.it/60x30"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="columns medium-3">
+            <a href="#"><img src="http://placehold.it/60x35"></a>
+            <a href="#"><img src="http://placehold.it/64x35"></a>
+        </div>
+        <div class="columns medium-9">
+          <p>††GoodNites® Bed Mats are a Product of the Year Winner! Children's Products Category. Survey of 50,138 people by TNS in the U.S.</p>
+          <p>†Bedwetting management</p>
+          <p>‡vs. the leading brand size 4T/5T training pants</p>
+          <p>‡‡National Kidney Foundation Pediatrician and GoodNites NiteLite Panelist, Dr. Wolffe Nadoolman</p>
         </div>
       </div>
     </div>
