working on sticky nav

--- a/plps/index.html
+++ b/plps/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-  <header class="header top-bar" data-topbar role="navigation">
+  <header class="header" role="navigation">
     <div class="primary-nav">
       <div class="wrapper">
         <div class="logos">
@@ -52,33 +52,46 @@
     <div class="sub-nav">
       <div class="wrapper">
         <a href="#">SIGN IN OR JOIN GOODNITES</a>
-        <div class="search-form">
+<!--         <div class="search-form">
           <img src="img/search_icon.png" />
           <form action="#" method="post">              
               <input name="Search" placeholder="How can we help?" type="search">
               <a href="#" type="submit">SEARCH</a>
           </form>
           <a href="#" class="close-search"><span class="sprite-close"></span></a>
-        </div>
+        </div> -->
       </div>
     </div>
+
+    <div class="wrapper">
+      <div class="search-form">
+        <img src="img/search_icon.png" />
+        <form action="#" method="post">              
+            <input name="Search" placeholder="How can we help?" type="search">
+            <a href="#" type="submit">SEARCH</a>
+        </form>
+        <a href="#" class="close-search"><span class="sprite-close"></span></a>
+      </div>
+    </div>
+
     <div class="sticky-nav">
       <div class="wrapper">
         <h2>Girls GoodNites Bedtime Pants</h2>
-        <a href="#" class="button radius buy">BUY NOW</a>
+        <a href="#" class="button round buy">BUY NOW</a>
       </div>
     </div>
     <div class="sticky-nav-links">
       <div class="wrapper">
-        <ul class="right">
-          <li><a href="">IMAGES</a></li>
-          <li><a href="">FEATURES</a></li>
-          <li><a href="">SIZING</a></li>
-          <li><a href="">SAVE NOW</a></li>
-          <li><a href="">EARN POINTS</a></li>
-          <li><a href="">REVIEWS</a></li>
+        <ul class="text-center">
+          <li><a href="" class="padding-lg">IMAGES</a></li>
+          <li><a href="" class="padding-lg">FEATURES</a></li>
+          <li><a href="" class="active padding-lg">SIZING</a></li>
+          <li><a href="" class="padding-lg">SAVE NOW</a></li>
+          <li><a href="" class="padding-lg">EARN POINTS</a></li>
+          <li><a href="" class="padding-lg">REVIEWS</a></li>
         </ul>
       </div>
+      <div class="clearfix">
     </div>
   </header>
 
