added welcome message

--- a/plps/index.html
+++ b/plps/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-  <header class="header" role="navigation">
+  <header class="header sticky" role="navigation">
     <div class="primary-nav">
       <div class="wrapper">
         <div class="logos">
@@ -37,7 +37,7 @@
               <li><a href="#">See All Countries</a></li>
             </ul>
           </li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="#" class="active">Contact Us</a></li>
           <li><a href="#">Buy Now</a></li>
         </ul>
 
@@ -52,14 +52,7 @@
     <div class="sub-nav">
       <div class="wrapper">
         <a href="#">SIGN IN OR JOIN GOODNITES</a>
-<!--         <div class="search-form">
-          <img src="img/search_icon.png" />
-          <form action="#" method="post">              
-              <input name="Search" placeholder="How can we help?" type="search">
-              <a href="#" type="submit">SEARCH</a>
-          </form>
-          <a href="#" class="close-search"><span class="sprite-close"></span></a>
-        </div> -->
+        <p>HI STEPHANIE! <img src="img/cup.jpg" /> YOU HAVE <span class="points">5.345</span> POINTS!</p>
       </div>
     </div>
 
@@ -70,7 +63,7 @@
             <input name="Search" placeholder="How can we help?" type="search">
             <a href="#" type="submit">SEARCH</a>
         </form>
-        <a href="#" class="close-search"><span class="sprite-close"></span></a>
+        <a href="#" class="close-search"><div class="sprite-close"></div></a>
       </div>
     </div>
 
