--- a/plps/index.html
+++ b/plps/index.html
@@ -21,9 +21,9 @@
     <div class="primary-nav">
       <div class="wrapper">
         <div class="logos">
-          <a role="link" class="first" href="#"><img src="img/logo/Huggies_logo.png" alt="Huggies" /></a>
-          <a role="link" href="#"><img src="img/logo/PullUps_logo.png" alt="PullUps" /></a>
-          <a role="link" class="logo" href="#"><img src="img/logo/GoodNights_logo.png" alt="GoodNights" /></a>
+          <a role="link" class="first" href="#"><img src="img/media/Huggies_logo.png" alt="Huggies" /></a>
+          <a role="link" href="#"><img src="img/media/PullUps_logo.png" alt="PullUps" /></a>
+          <a role="link" class="logo" href="#"><img src="img/media/GoodNights_logo.png" alt="GoodNights" /></a>
         </div>
 
         <ul role="toolbar" class="utility-nav">
@@ -70,7 +70,7 @@
             <input name="Search" placeholder="How can we help?" type="search">
             <a href="#" type="submit">SEARCH</a>
         </form>
-        <a href="#" class="close-search"><span class="sprite-close"></span></a>
+        <a href="#" class="close-search"><div class="sprite-close"></div></a>
       </div>
     </div>
 
