--- a/plps/index.html
+++ b/plps/index.html
@@ -91,8 +91,7 @@
   <div class="clearfix"></div>
   
 <div class="content">
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur semper diam, in gravida libero imperdiet sit amet. Cras mattis quam neque, quis volutpat lorem congue sit amet. Pellentesque et dapibus nisi. Praesent sagittis fermentum diam lacinia imperdiet. Nam in dolor nec ex faucibus vestibulum. Etiam quis massa ipsum. Donec at arcu elit.</p>
-  <p>Quisque eget ex aliquet, finibus metus imperdiet, bibendum risus. Duis ut sem ac nisl faucibus tristique. Praesent eget maximus dolor. Curabitur sit amet laoreet metus. Pellentesque urna quam, faucibus et tempor at, pellentesque a sapien. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam convallis placerat velit vitae vestibulum. Proin malesuada nec lacus et tristique.</p>
+  <br><br><br><br><br><br>
 </div>
 
 
@@ -124,9 +123,11 @@
             Common Questions
           </div>
           <ul>
-            <li><a target="_new" href="#">Kimberly-Clark Brands </a></li>
+            <li><a target="_new" href="#">Kimberly-Clark Brands <i class="fa fa-external-link"></i>
+</a></li>
             <li><a href="#">Legal Statement</a></li>
-            <li><a target="_new" href="#">Press </a></li>
+            <li><a target="_new" href="#">Press <i class="fa fa-external-link"></i>
+</a></li>
           </ul>
         </div>
         <div class="columns medium-3">
@@ -135,7 +136,8 @@
           </div>
           <ul>
             <li><a href="#">Privacy Policy</a></li>
-            <li><a target="_new" href="#">Careers </a></li>
+            <li><a target="_new" href="#">Careers <i class="fa fa-external-link"></i>
+</a></li>
             <li><a href="#">Terms & Conditions</a></li>
           </ul>
         </div>
@@ -165,8 +167,8 @@
               Kimberly-Clark Baby and Childcare Brands
             </div>
             <div class="pull-right text-right">
-              <a href="#"><img src="http://placehold.it/60x30"></a>
-              <a href="#"><img src="http://placehold.it/60x30"></a>
+              <a href="#"><img src="img/media/huggies_logo_footer.png" alt="Huggies"></a>
+              <a href="#"><img src="img/media/pullups_logo_footer.png" alt="Pull Ups"></a>
             </div>
           </div>
         </div>
