Added Paxy.js and header animation capabilities

--- a/plps/index.html
+++ b/plps/index.html
@@ -15,15 +15,15 @@
   <!-- Foundation Scripts -->
   <script src="js/vendor/modernizr.js"></script>
   </head>
-  <body>
+  <body data-paxy="customEffect{padding-top,264,200,px,0,64}">
 
-  <header class="header sticky" role="navigation">
+  <header class="header sticky" data-paxy="customEffect{top,0,-64,px,0,64}" role="navigation">
     <div class="primary-nav">
       <div class="wrapper">
         <div class="logos">
           <a role="link" class="first" href="#"><img src="img/media/Huggies_logo.png" alt="Huggies" /></a>
           <a role="link" href="#"><img src="img/media/PullUps_logo.png" alt="PullUps" /></a>
-          <a role="link" class="logo" href="#"><img src="img/media/GoodNights_logo.png" alt="GoodNights" /></a>
+          <a role="link" class="logo" href="#" data-paxy="customEffect{margin-top,15,28,px,0,64}"><img src="img/media/GoodNights_logo.png" alt="GoodNights" data-paxy="customEffect{height,46,38,px,0,64}" /></a>
         </div>
 
         <ul role="toolbar" class="utility-nav">
@@ -91,7 +91,19 @@
   <div class="clearfix"></div>
   
 <div class="content">
-  <br><br><br><br><br><br>
+  <div class="row">
+    <div class="columns small-12">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed erat eget diam luctus laoreet. Aenean auctor felis tellus. Quisque dictum libero vel dui bibendum ultricies. Sed varius dui sodales ante laoreet, in eleifend turpis maximus. Maecenas ut est pulvinar, volutpat nisl ut, commodo lectus. Cras sit amet ipsum eu dui luctus aliquet ut in sapien. In a pretium ligula, eget accumsan risus. Phasellus porttitor quis libero eget vulputate. Sed placerat elementum sollicitudin. In semper sem eget lacus imperdiet rhoncus. Integer finibus ex vel tristique vestibulum. Proin pharetra sollicitudin imperdiet. Morbi vel dui elementum est gravida euismod. Phasellus posuere odio in ante laoreet, id sodales felis pellentesque.</p>
+
+      <p>Proin non consectetur ex. Quisque augue ligula, ullamcorper sit amet hendrerit in, blandit quis augue. Integer ut feugiat purus, eu aliquet nulla. Donec fringilla dapibus ornare. Donec ac lobortis tortor, vel molestie leo. Quisque maximus est eu tincidunt eleifend. Nulla vestibulum ut metus vel blandit.</p>
+
+      <p>Mauris finibus magna eget justo interdum aliquam. In at dolor urna. Nullam sed sapien hendrerit mauris cursus lacinia. In maximus nibh orci, vel hendrerit nisl lobortis ac. Aliquam erat volutpat. Proin non justo sit amet risus fermentum aliquam vel hendrerit arcu. Praesent in efficitur sem. Maecenas sed arcu metus. Cras vitae blandit orci, id auctor lacus. Nunc sit amet lorem non tellus pretium feugiat. Maecenas pulvinar est massa, sed fringilla massa tempor maximus. Nunc tortor elit, mollis sit amet augue non, consequat tempor risus.</p>
+
+      <p>Maecenas leo ante, finibus ac laoreet in, cursus suscipit quam. Nunc id finibus arcu. Praesent efficitur sapien tellus. Phasellus volutpat tellus purus, vel viverra eros sagittis ac. Ut pulvinar rhoncus placerat. Maecenas pharetra odio magna, eu vulputate velit finibus quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed lobortis dolor quis condimentum viverra. Sed molestie ullamcorper tristique. Aliquam aliquet convallis tincidunt. Ut id felis sed sapien aliquet egestas. Cras consectetur consequat diam, luctus condimentum arcu suscipit ac. Cras erat elit, commodo quis magna ac, ultricies dictum mi. Sed porta gravida quam, pretium porttitor massa eleifend et.</p>
+
+      <p>Nulla elementum metus lorem, ultricies pellentesque libero efficitur quis. Duis vel pretium leo. Donec velit elit, sagittis in luctus id, bibendum non lorem. Mauris mattis, nulla id dictum fermentum, ipsum erat finibus augue, sit amet tincidunt ligula mi porta leo. Cras suscipit diam ante, quis mollis tortor accumsan nec. Fusce vel lacinia nibh. Ut erat nisl, faucibus mattis cursus eget, bibendum sit amet lectus. Nulla placerat, enim eu iaculis sagittis, mauris augue lobortis metus, viverra scelerisque augue lacus ac odio.</p>
+    </div>
+  </div>
 </div>
 
 
@@ -196,6 +208,7 @@
     <script src="js/vendor/fastclick.js"></script>
     <script src="js/foundation.min.js"></script>
     <!-- Custom Scripts -->
+    <script src="js/paxy.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
