--- a/plps/index.html
+++ b/plps/index.html
@@ -167,7 +167,7 @@
           <div class="footer-heading pull-right hide-for-medium-up">
             1-877-648-2484  
           </div>
-          <a href="#" class="button round">Healthcare Professionals</a>
+          <a href="#" class="button round">HEALTHCARE PROFESSIONALS</a>
         </div>
       </div>
     </div>
@@ -175,9 +175,9 @@
       <div class="footer-info-header">
         <div class="row">
           <div class="columns small-12">
-            <div class="pull-left">
+            <p class="pull-left">
               Kimberly-Clark Baby and Childcare Brands
-            </div>
+            </p>
             <div class="pull-right text-right">
               <a href="#"><img src="img/media/huggies_logo_footer.png" alt="Huggies"></a>
               <a href="#"><img src="img/media/pullups_logo_footer.png" alt="Pull Ups"></a>
@@ -187,9 +187,10 @@
       </div>
       <div class="footer-info-body">
         <div class="row">
-          <div class="columns medium-3">
-              <a href="#"><img src="http://placehold.it/60x35"></a>
-              <a href="#"><img src="http://placehold.it/64x35"></a>
+          <div class="columns medium-3 copyright">
+              <a href="#"><img src="img/media/marvel_logo.png" alt="Marvel"></a>
+              <a href="#"><img src="img/media/fairies_logo.png" alt="Fairies"></a>
+              <p>2015 KCWW. All Rights Reserved.</p>
           </div>
           <div class="columns medium-9">
             <p>††GoodNites® Bed Mats are a Product of the Year Winner! Children's Products Category. Survey of 50,138 people by TNS in the U.S.</p>
